--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@splidejs/splide": "^4.1.4",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
