--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.83.0",
     "scss": "^0.2.4",
     "swiper": "^11.1.15"
